Improved UI for mobiles (#51)

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -76,3 +76,9 @@
   --md-admonition-fg-color:     #ffffff;
   --md-admonition-bg-color:     #1a1b26;
 }
+
+@media screen and (max-width: 768px) {
+  .sidebar {
+    display: none !important;
+  }
+}
